# WasmBooth

./: Dockerfile  LICENSE  README.md  go.mod  go.sum
benchmarks/genpdf/: Cargo.toml  Dockerfile  genpdf_final.wasm
benchmarks/genpdf/src/: main.rs
benchmarks/imageblur/: Cargo.toml  Dockerfile  imageblur_final.wasm
benchmarks/imageblur/src/: main.rs
benchmarks/json-compression/: Cargo.toml  Dockerfile  json-compression_final.wasm
benchmarks/json-compression/src/: main.rs
benchmarks/rsa-keygen/: Cargo.toml  Dockerfile  rsa-keygen_final.wasm
benchmarks/rsa-keygen/src/: main.rs
benchmarks/scrypt/: Cargo.toml  Dockerfile  scrypt_final.wasm
benchmarks/scrypt/src/: main.rs
cmd/: main.go
deployment/: ksvc.yaml  pv.yaml  route_test.yaml
deployment/platform copy/: README.md
deployment/platform copy/extra_playbooks/roles/kubespray-defaults/defaults/main/: main.yml
deployment/platform copy/knative/: deploy.sh
deployment/platform copy/kubespray-inventory/: hosts.yaml
deployment/platform copy/kubespray-inventory/group_vars/all/: containerd.yml
deployment/platform copy/kubespray-inventory/group_vars/k8s_cluster/: addons.yml  k8s-cluster.yml
deployment/platform/knative/: README.md  serving-default-domain.yaml
deployment/platform/kubespray-inventory/: README.md
deployment/platform/rook/: cluster.yaml  filesystem.yaml  storageclass.yaml  ubuntu-cephfs-test.yaml
deployment/wasmbox/: ksvc-standalone.yaml  pvc.yaml  service_test.yaml  virtual_service_test.yaml
internal/cgroup_manager/: cgroup_manager.go  superpod_metrics.pb.go  superpod_metrics.proto
internal/config/: config.go
internal/healthcheck/: healthcheck.go
internal/http_server/: server.go
internal/metrics_collector/: metrics_collector.go
internal/metrics_reporter/: metrics_reporter.go
internal/utils/: utils.go
