[package]
name = "imageblur"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.62"
serde = { version = "1.0.62", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["jpeg"] } 
base64 = "0.13.0"
rand = "0.8"

[[bin]]
name = "imageblur"
path = "src/main.rs"
